# stackpulse

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  codecov.yml
.github/workflows/: ci.yml  codspeed.yml  publish.yml
benches/: benchmarks.rs  stackpulse_suite.rs
docs/: api.md  explanation.md  how-to.md  reference.md  tutorials.md
examples/: bench_spool_symbolize.rs  gecko_profile.rs  mini_profile.rs
src/: bench_support.rs  children.rs  elf.rs  error.rs  lib.rs  module_base.rs  module_traits.rs  native_module.rs  proc_maps.rs  profile.rs  state.rs  stats.rs  symbolize.rs  symbols.rs  test_support.rs
src/elf/: loader.rs  mod.rs  test_fixtures.rs  types.rs
src/linux/: attach.rs  bench.rs  convert_regs.rs  cpu.rs  elf_loader.rs  elf_types.rs  mod.rs  perf_event.rs  perf_group.rs  process.rs  sorter.rs  test_fixtures.rs  types.rs  unwind.rs
src/spool/: mod.rs  model.rs  modules.rs
src/symbolize/: kernel.rs
src/symbolize/kernel/: kallsyms.rs  system_map.rs
tests/: integration.rs
tests/targets/: c_kernel_syscall.c  c_ladder.c  c_recursion.c  c_shared_main.c  c_shared_worker.c  rust_ladder.rs  test_target.h
