[package]
name = "stackpulse"
version = "0.1.0"
edition = "2021"
description = "Linux perf_event stack sampling with native unwinding, symbolization, and compact spooling"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pablogsal/stackpulse"
keywords = ["profiler", "linux", "perf", "sampling", "unwind"]
categories = ["development-tools::profiling"]

[lints]
workspace = true

[dependencies]
bitflags = "2.4"
framehop = "0.16.0"
goblin = "0.9"
integer-encoding = { version = "4.1.0", default-features = false }
libc = "0.2"
memchr = "2.7"
memmap2 = "0.9"
mio = { version = "1", features = ["os-ext", "os-poll"] }
nix = { version = "0.29", features = ["fs", "process"] }
object = { version = "0.39", default-features = false, features = ["std", "read_core", "elf", "compression"] }
perf-event-open = { version = "0.5", features = ["linux-5.13"] }
perf-event-open-sys = "6.0"
rustc-hash = "2.1"
tokio = { version = "1.38", features = ["rt", "io-util", "sync", "time", "net"] }
tracing = "0.1"
wholesym = "0.8.1"

[features]
default = []
debuginfod = []

[dev-dependencies]
criterion = { version = "4.7.0", package = "codspeed-criterion-compat" }

[[bench]]
name = "stackpulse_suite"
harness = false

[workspace.lints.clippy]
# Enable lint groups (priority -1 so specific lints take precedence)
all = { level = "warn", priority = -1 }
cognitive_complexity = "warn"

[patch.crates-io]
framehop = { git = "https://github.com/mstange/framehop", rev = "fceeebab2e9cd77f47d47c63e5c2a6de3d4a88b3" }
samply-symbols = { git = "https://github.com/mstange/samply", rev = "d31a3e9ed59f06d309d6984455c824a03a15f081" }
wholesym = { git = "https://github.com/mstange/samply", rev = "d31a3e9ed59f06d309d6984455c824a03a15f081" }
